--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -12,7 +12,9 @@ footer .footer-top {
 }
 footer .footer-top .container {
   text-align: center;
-  padding: 0 15px;
+  max-width: 1200px;
+  width: 100%;
+  padding: 0 25px;
 }
 footer .footer-top .container h5 {
   text-transform: uppercase;
@@ -164,6 +166,328 @@ footer .footer-top .container .subscribe .social-net ul li a svg {
   width: 40px;
   height: 40px;
 }
+@media screen and (min-width: 391px) and (max-width: 821px) {
+  footer .footer-top {
+    padding: 70px 0 50px;
+  }
+  footer .footer-top .container {
+    text-align: center;
+    max-width: 1200px;
+    width: 100%;
+    padding: 0 70px;
+  }
+  footer .footer-top .container h5 {
+    text-transform: uppercase;
+    color: #eb4d4b;
+    font-size: 16px;
+    letter-spacing: 8px;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 12px;
+  }
+  footer .footer-top .container h1 {
+    position: relative;
+    font-weight: 600;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+  }
+  footer .footer-top .container h1::after {
+    border-top: 4px solid #eb4d4b;
+    bottom: 0px;
+    content: "";
+    position: absolute;
+    left: 42%;
+    right: 42%;
+    width: 16%;
+  }
+  footer .footer-top .container .contact {
+    width: 100%;
+    border: solid 0.5px rgb(230, 230, 230);
+    padding: 30px 15px;
+  }
+  footer .footer-top .container .contact form .name-email {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  footer .footer-top .container .contact form .name-email input {
+    width: 48%;
+    height: 45px;
+    border: solid 0.5px rgb(230, 230, 230);
+    border-radius: 10px;
+    padding-left: 20px;
+    outline: none;
+  }
+  footer .footer-top .container .contact form .name-email input::-moz-placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .name-email input::placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .message {
+    margin-bottom: 10px;
+  }
+  footer .footer-top .container .contact form .message textarea {
+    font-size: 16px;
+    width: 100%;
+    height: 130px;
+    border: solid 0.5px rgb(230, 230, 230);
+    border-radius: 10px;
+    padding: 10px 10px;
+    outline: none;
+  }
+  footer .footer-top .container .contact form .message textarea::-moz-placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .message textarea::placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form button {
+    background-color: #eb4d4b;
+    height: 50px;
+    padding: 8px 20px;
+    border: none;
+    border-radius: 30px;
+    font-size: 14px;
+    color: white;
+    transition: 0.5s;
+  }
+  footer .footer-top .container .contact form button:hover {
+    color: white;
+    background-color: #232323;
+  }
+  footer .footer-top .container .subscribe {
+    width: 100%;
+    border: solid 0.5px rgb(230, 230, 230);
+    padding: 30px 15px;
+  }
+  footer .footer-top .container .subscribe .letter-icon {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+  }
+  footer .footer-top .container .subscribe .letter-icon svg {
+    fill: #EB4D50;
+  }
+  footer .footer-top .container .subscribe h2 {
+    font-size: 22px;
+    font-weight: 600;
+  }
+  footer .footer-top .container .subscribe p {
+    font-size: 14px;
+    color: rgb(120, 120, 120);
+  }
+  footer .footer-top .container .subscribe .email {
+    position: relative;
+    padding: 0 40px;
+    margin-bottom: 20px;
+  }
+  footer .footer-top .container .subscribe .email input {
+    padding-left: 20px;
+    width: 80%;
+    height: 50px;
+    border-radius: 30px;
+    border: solid 0.5px rgb(230, 230, 230);
+    outline: none;
+  }
+  footer .footer-top .container .subscribe .email input::-moz-placeholder {
+    font-size: 14px;
+  }
+  footer .footer-top .container .subscribe .email input::placeholder {
+    font-size: 14px;
+  }
+  footer .footer-top .container .subscribe .email button {
+    position: absolute;
+    top: 2.5px;
+    right: 101.5px;
+    background-color: #eb4d4b;
+    height: 45px;
+    padding: 8px 30px;
+    border: none;
+    border-radius: 30px;
+    font-size: 14px;
+    color: white;
+    transition: 0.5s;
+  }
+  footer .footer-top .container .subscribe .email button:hover {
+    color: white;
+    background-color: #232323;
+  }
+  footer .footer-top .container .subscribe .social-net ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  footer .footer-top .container .subscribe .social-net ul li {
+    margin: 0;
+  }
+  footer .footer-top .container .subscribe .social-net ul li a svg {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media screen and (max-width: 391px) {
+  footer .footer-top {
+    padding: 70px 0 50px;
+  }
+  footer .footer-top .container {
+    text-align: center;
+    max-width: 1200px;
+    width: 100%;
+    padding: 0 25px;
+  }
+  footer .footer-top .container h5 {
+    text-transform: uppercase;
+    color: #eb4d4b;
+    font-size: 16px;
+    letter-spacing: 8px;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 12px;
+  }
+  footer .footer-top .container h1 {
+    position: relative;
+    font-weight: 600;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+  }
+  footer .footer-top .container h1::after {
+    border-top: 4px solid #eb4d4b;
+    bottom: 0px;
+    content: "";
+    position: absolute;
+    left: 42%;
+    right: 42%;
+    width: 16%;
+  }
+  footer .footer-top .container .contact {
+    width: 100%;
+    border: solid 0.5px rgb(230, 230, 230);
+    padding: 30px 15px;
+  }
+  footer .footer-top .container .contact form .name-email {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  footer .footer-top .container .contact form .name-email input {
+    width: 47%;
+    height: 45px;
+    border: solid 0.5px rgb(230, 230, 230);
+    border-radius: 10px;
+    padding-left: 20px;
+    outline: none;
+  }
+  footer .footer-top .container .contact form .name-email input::-moz-placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .name-email input::placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .message {
+    margin-bottom: 10px;
+  }
+  footer .footer-top .container .contact form .message textarea {
+    font-size: 16px;
+    width: 100%;
+    height: 130px;
+    border: solid 0.5px rgb(230, 230, 230);
+    border-radius: 10px;
+    padding: 10px 10px;
+    outline: none;
+  }
+  footer .footer-top .container .contact form .message textarea::-moz-placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form .message textarea::placeholder {
+    color: rgb(200, 200, 200);
+  }
+  footer .footer-top .container .contact form button {
+    background-color: #eb4d4b;
+    height: 50px;
+    padding: 8px 20px;
+    border: none;
+    border-radius: 30px;
+    font-size: 14px;
+    color: white;
+    transition: 0.5s;
+  }
+  footer .footer-top .container .contact form button:hover {
+    color: white;
+    background-color: #232323;
+  }
+  footer .footer-top .container .subscribe {
+    width: 100%;
+    border: solid 0.5px rgb(230, 230, 230);
+    padding: 30px 15px;
+  }
+  footer .footer-top .container .subscribe .letter-icon {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+  }
+  footer .footer-top .container .subscribe .letter-icon svg {
+    fill: #EB4D50;
+  }
+  footer .footer-top .container .subscribe h2 {
+    font-size: 22px;
+    font-weight: 600;
+  }
+  footer .footer-top .container .subscribe p {
+    font-size: 14px;
+    color: rgb(120, 120, 120);
+  }
+  footer .footer-top .container .subscribe .email {
+    position: relative;
+    padding: 0px !important;
+    margin-bottom: 20px;
+  }
+  footer .footer-top .container .subscribe .email input {
+    padding-left: 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    border: solid 0.5px rgb(230, 230, 230);
+    outline: none;
+  }
+  footer .footer-top .container .subscribe .email input::-moz-placeholder {
+    font-size: 14px;
+  }
+  footer .footer-top .container .subscribe .email input::placeholder {
+    font-size: 14px;
+  }
+  footer .footer-top .container .subscribe .email button {
+    position: absolute;
+    top: 2.5px;
+    right: 2.5px;
+    background-color: #eb4d4b;
+    height: 45px;
+    padding: 8px 30px;
+    border: none;
+    border-radius: 30px;
+    font-size: 14px;
+    color: white;
+    transition: 0.5s;
+  }
+  footer .footer-top .container .subscribe .email button:hover {
+    color: white;
+    background-color: #232323;
+  }
+  footer .footer-top .container .subscribe .social-net ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  footer .footer-top .container .subscribe .social-net ul li {
+    margin: 0;
+  }
+  footer .footer-top .container .subscribe .social-net ul li a svg {
+    width: 40px;
+    height: 40px;
+  }
+}
 footer .footer-mid {
   padding: 0 0 50px;
 }
@@ -194,6 +518,11 @@ footer .footer-mid ul li a {
 footer .footer-mid ul li a:hover {
   color: #eb4d4b;
 }
+@media screen and (max-width: 391px) {
+  footer .footer-mid ul {
+    display: none;
+  }
+}
 footer .footer-bottom {
   padding: 10px 0;
   background-color: #151515;
@@ -218,6 +547,29 @@ footer .footer-bottom .pay-cards img {
   margin-left: 10px;
 }
 @media screen and (min-width: 391px) and (max-width: 820px) {
+  footer .footer-bottom span {
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  footer .footer-bottom span a {
+    text-decoration: none;
+    color: white;
+  }
+  footer .footer-bottom .pay-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer .footer-bottom .pay-cards img {
+    margin-left: 10px;
+  }
+}
+@media screen and (max-width: 391px) {
   footer .footer-bottom span {
     text-align: center;
     color: white;
