--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -10,7 +10,9 @@ footer{
         padding: 70px 0 50px;
         .container{
             text-align: center;
-            padding: 0 15px;
+            max-width: 1200px;
+            width: 100%;
+            padding: 0 25px;
             h5{
                 text-transform: uppercase;
                 color: #eb4d4b;
@@ -160,6 +162,322 @@ footer{
             }
         }
     }
+    @media screen and (min-width:391px) and (max-width:821px){
+        .footer-top{
+            padding: 70px 0 50px;
+            .container{
+                text-align: center;
+                max-width: 1200px;
+                width: 100%;
+                padding: 0 70px;
+                h5{
+                    text-transform: uppercase;
+                    color: #eb4d4b;
+                    font-size: 16px;
+                    letter-spacing: 8px;
+                    font-weight: 500;
+                    margin: 0;
+                    margin-bottom: 12px;
+                }
+                h1{
+                    position: relative;
+                    font-weight: 600;
+                    margin-bottom: 25px;
+                    padding-bottom: 25px;
+                    &::after{
+                        border-top: 4px solid #eb4d4b;
+                        bottom: 0px;
+                        content: "";
+                        position: absolute;
+                        left: 42%;
+                        right: 42%;
+                        width: 16%;
+                    }
+                }
+                .contact{
+                    width: 100%;
+                    border: solid 0.5px rgb(230, 230, 230);
+                    padding: 30px 15px;
+                    form{
+                        .name-email{
+                            display: flex;
+                            justify-content: space-between;
+                            margin-bottom: 15px;
+                            input{
+                                width: 48%;
+                                height: 45px;
+                                border: solid 0.5px rgb(230, 230, 230);
+                                border-radius: 10px;
+                                padding-left: 20px;
+                                outline: none;
+                                &::placeholder{
+                                    color: rgb(200, 200, 200);
+                                }
+                            }
+                        }
+                        .message{
+                            margin-bottom: 10px;
+                            textarea{
+                                font-size: 16px;
+                                width: 100%;
+                                height: 130px;
+                                border: solid 0.5px rgb(230, 230, 230);
+                                border-radius: 10px;
+                                padding: 10px 10px;
+                                outline: none;
+                                &::placeholder{
+                                    color: rgb(200, 200, 200);
+                                }
+                            }
+                        }
+                        button{
+                            background-color: #eb4d4b;
+                            height: 50px;
+                            padding: 8px 20px;
+                            border: none;
+                            border-radius: 30px;
+                            font-size: 14px;
+                            color: white;
+                            transition: 0.5s;
+                            &:hover{
+                                color: white;
+                                background-color:#232323;
+                            }
+                        }
+                    }
+                }
+                .subscribe{
+                    width: 100%;       
+                    border: solid 0.5px rgb(230, 230, 230);
+                    padding: 30px 15px;
+                    .letter-icon{
+                        width: 50px;
+                        height: 50px;
+                        margin: 0 auto;
+                        margin-bottom: 15px;
+                        svg{
+                            fill: #EB4D50;
+                        }
+                    }
+                    h2{
+                        font-size: 22px;
+                        font-weight: 600;
+                    }
+                    p{
+                        font-size: 14px;
+                        color: rgb(120, 120, 120);
+                    }
+                    .email{
+                        position: relative;
+                        padding: 0 40px;
+                        margin-bottom: 20px;
+                        input{
+                            padding-left: 20px;
+                            width: 80%;
+                            height: 50px;
+                            border-radius: 30px;
+                            border: solid 0.5px rgb(230, 230, 230);
+                            outline: none;
+                            &::placeholder{
+                                font-size: 14px;
+                            }
+                        }
+                        button{
+                            position: absolute;
+                            top: 2.5px;
+                            right: 101.5px;
+                            background-color: #eb4d4b;
+                            height: 45px;
+                            padding: 8px 30px;
+                            border: none;
+                            border-radius: 30px;
+                            font-size: 14px;
+                            color: white;
+                            transition: 0.5s;
+                            &:hover{
+                                color: white;
+                                background-color: #232323;
+                            }
+                        }
+                    }
+                    .social-net{
+                        ul{
+                            list-style: none;
+                            margin: 0;
+                            padding: 0;
+                            li{
+                                margin: 0;
+                                a{
+                                   svg{
+                                    width: 40px;
+                                    height: 40px;
+                                   }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    @media screen and (max-width:391px) {
+        .footer-top{
+            padding: 70px 0 50px;
+            .container{
+                text-align: center;
+                max-width: 1200px;
+                width: 100%;
+                padding: 0 25px;
+                h5{
+                    text-transform: uppercase;
+                    color: #eb4d4b;
+                    font-size: 16px;
+                    letter-spacing: 8px;
+                    font-weight: 500;
+                    margin: 0;
+                    margin-bottom: 12px;
+                }
+                h1{
+                    position: relative;
+                    font-weight: 600;
+                    margin-bottom: 25px;
+                    padding-bottom: 25px;
+                    &::after{
+                        border-top: 4px solid #eb4d4b;
+                        bottom: 0px;
+                        content: "";
+                        position: absolute;
+                        left: 42%;
+                        right: 42%;
+                        width: 16%;
+                    }
+                }
+                .contact{
+                    width: 100%;
+                    border: solid 0.5px rgb(230, 230, 230);
+                    padding: 30px 15px;
+                    form{
+                        .name-email{
+                            display: flex;
+                            justify-content: space-between;
+                            margin-bottom: 15px;
+                            input{
+                                width: 47%;
+                                height: 45px;
+                                border: solid 0.5px rgb(230, 230, 230);
+                                border-radius: 10px;
+                                padding-left: 20px;
+                                outline: none;
+                                &::placeholder{
+                                    color: rgb(200, 200, 200);
+                                }
+                            }
+                        }
+                        .message{
+                            margin-bottom: 10px;
+                            textarea{
+                                font-size: 16px;
+                                width: 100%;
+                                height: 130px;
+                                border: solid 0.5px rgb(230, 230, 230);
+                                border-radius: 10px;
+                                padding: 10px 10px;
+                                outline: none;
+                                &::placeholder{
+                                    color: rgb(200, 200, 200);
+                                }
+                            }
+                        }
+                        button{
+                            background-color: #eb4d4b;
+                            height: 50px;
+                            padding: 8px 20px;
+                            border: none;
+                            border-radius: 30px;
+                            font-size: 14px;
+                            color: white;
+                            transition: 0.5s;
+                            &:hover{
+                                color: white;
+                                background-color:#232323;
+                            }
+                        }
+                    }
+                }
+                .subscribe{
+                    width: 100%;       
+                    border: solid 0.5px rgb(230, 230, 230);
+                    padding: 30px 15px;
+                    .letter-icon{
+                        width: 50px;
+                        height: 50px;
+                        margin: 0 auto;
+                        margin-bottom: 15px;
+                        svg{
+                            fill: #EB4D50;
+                        }
+                    }
+                    h2{
+                        font-size: 22px;
+                        font-weight: 600;
+                    }
+                    p{
+                        font-size: 14px;
+                        color: rgb(120, 120, 120);
+                    }
+                    .email{
+                        position: relative;
+                        padding:0px!important;
+                        margin-bottom: 20px;
+                        input{
+                            padding-left: 20px;
+                            width: 100%;
+                            height: 50px;
+                            border-radius: 30px;
+                            border: solid 0.5px rgb(230, 230, 230);
+                            outline: none;
+                            &::placeholder{
+                                font-size: 14px;
+                            }
+                        }
+                        button{
+                            position: absolute;
+                            top: 2.5px;
+                            right: 2.5px;
+                            background-color: #eb4d4b;
+                            height: 45px;
+                            padding: 8px 30px;
+                            border: none;
+                            border-radius: 30px;
+                            font-size: 14px;
+                            color: white;
+                            transition: 0.5s;
+                            &:hover{
+                                color: white;
+                                background-color: #232323;
+                            }
+                        }
+                    }
+                    .social-net{
+                        ul{
+                            list-style: none;
+                            margin: 0;
+                            padding: 0;
+                            li{
+                                margin: 0;
+                                a{
+                                   svg{
+                                    width: 40px;
+                                    height: 40px;
+                                   }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
     .footer-mid{
         padding: 0 0 50px;
         ul{
@@ -187,6 +505,13 @@ footer{
                         color: #eb4d4b;
                     }
                 }
+            }
+        }
+    }
+    @media screen and (max-width:391px) {
+        .footer-mid{
+            ul{
+                display: none;
             }
         }
     }
@@ -238,6 +563,31 @@ footer{
             }
         }
       }
+    }
+    @media screen and (max-width:391px) {
+        .footer-bottom{
+            span{
+                text-align: center;
+                color: white;
+                font-size: 14px;
+                font-weight: 400;
+                letter-spacing: 0.5px;
+                padding: 0;
+                margin-bottom: 10px;
+                a{
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+            .pay-cards{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img{
+                    margin-left: 10px;
+                }
+            }
+          }
     }
     .go-top{
         opacity: 0;
