--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -29,6 +29,9 @@ div#mini-head{
                     width: 40px;
                     height: 40px;
                 }
+                .search-active{
+                    display: none;
+                }
             }
             .logo{
                 width: 156px;
