--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -473,6 +473,87 @@ section#products{
             }
         }
     }
+    @media screen and (max-width:391) {
+        .container{
+            width: 1200px;
+            max-width: 85%;
+            .image{
+                margin-bottom: 30px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .about{
+                text-align: center!important;
+                .title{
+                    text-align: center!important;
+                    padding-bottom: 25px;
+                    margin-bottom: 25px;
+                    h5{
+                        text-transform: uppercase;
+                        color: #eb4d4b;
+                        font-size: 16px;
+                        letter-spacing: 8px;
+                        font-weight: 500;
+                        margin: 0;
+                        margin-bottom: 12px;
+                    }
+                    h1{
+                        font-size: 40px;
+                        font-weight: 600;
+                        position: relative;
+                        &::after{
+                            border-top: 4px solid #eb4d4b;
+                            bottom: -20px;
+                            content: "";
+                            position: absolute;
+                            left: 42%;
+                            right: 42%;
+                            width: 16%;
+                        }
+                    }
+                }
+                p{
+                    font-size: 13px;
+                    color: gray;
+                    letter-spacing: 1px;
+                }
+                .about-list{
+                    justify-content: center;
+                    margin-bottom: 20px;
+                    ul{
+                        text-align: left;
+                        li{
+                            color: rgb(110, 110, 110);
+                            font-size: 15px;
+                            line-height: 30px;
+                        }
+                        li::marker{
+                            font-size: 20px;
+                            color: #eb4d4b;
+                        }
+                        &:nth-child(2){
+                            margin-left: 30px;
+                        }
+                    }
+                }
+                button{
+                    background-color: #eb4d4b;
+                    height: 45px;
+                    padding: 8px 30px;
+                    border: none;
+                    border-radius: 30px;
+                    font-size: 14px;
+                    color: white;
+                    transition: 0.5s;
+                    &:hover{
+                        background-color: #232323;
+                    }
+                }
+            }
+        }
+    }
     @media screen and (min-width:391px) and (max-width:1181px) {
         margin-bottom: 50px;
         .container{
@@ -622,7 +703,10 @@ section#customers{
             }
         }
         .item{
+            display: flex;
+            justify-content: center;
             .customer{
+                width: 97%;
                 background-color: white;
                 padding: 0px 50px 40px;
                 margin: 50px 0 0;
@@ -658,6 +742,54 @@ section#customers{
                             color: #eb4d4b;
                             letter-spacing: 1px;
                             font-weight: 400;
+                        }
+                    }
+                }
+            }
+        }
+
+        @media screen and (min-width:391px) and (max-width:821px) {
+            .item{
+                display: flex;
+                justify-content: center;
+                .customer{
+                    width: 85%;
+                    background-color: white;
+                    padding: 0px 50px 40px;
+                    margin: 50px 0 0;
+                    .avatar{
+                        position: relative;
+                        top: -50px;
+                        left: 10px;
+                        width: 100px;
+                        height: 100px;
+                        border: solid 5px  rgb(235, 77, 75);
+                        border-radius: 50%;
+                        overflow: hidden;
+                        img{
+                            object-fit: contain;
+                        }
+                    }
+                    .about{
+                        p{
+                            font-size: 14px;
+                            color: rgb(100, 100, 100);
+                            line-height: 25px;
+                            letter-spacing: 0.5px;
+                        }
+                    }
+                    .name-prof{
+                        span{
+                            font-size: 24px;
+                            font-weight: 500;
+                            color: #232323;
+                            &:nth-child(2){
+                                margin-left: 8px;
+                                font-size: 14px;
+                                color: #eb4d4b;
+                                letter-spacing: 1px;
+                                font-weight: 400;
+                            }
                         }
                     }
                 }
@@ -795,6 +927,61 @@ section#latest{
                     .active{
                         background-color: #f5f5f5!important;
                         color: #232323;
+                    }
+                }
+            }
+        }
+        .porduct-slide{
+            .item{
+                .prdct{
+                    padding: 15px 15px 0;
+                    text-align: center;
+                    .image{
+                        position: relative;
+                        height: 355px;
+                        img{
+                            object-fit: contain;
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                        }
+                        .rate{
+                            position: absolute;
+                            bottom: 10px;
+                            left: 0;
+                            right: 0;
+                            i{
+                                font-size: 13px;
+                            }
+                        }
+                        .wish-view{
+                            .icon{
+                                width: 40px;
+                                height: 40px;
+                            }
+                        }
+                    }
+                    .caption{
+                        padding: 10px;
+                        h4{
+                            font-size: 16px;
+                        }
+                        p{
+                            font-weight: 500;
+                            color: #eb4d4b;
+                        }
+                        button{
+                            display: none;
+                        }
+                        .active-button{
+                            border: none;
+                            background-color: #eb4d4b;
+                            color: white;
+                            font-size: 13px;
+                            font-weight: 400;
+                            letter-spacing: 0.5px;
+                            padding: 10px 21px;
+                        }
                     }
                 }
             }
