--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -335,6 +335,10 @@ header{
                 .cart-drop.active{
                     width: 400px;
                 }
+                .cart-drop{
+                    height: 100vh;
+                    width: 400px;
+                }
             }
         }
     }
