--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -944,6 +944,22 @@ section#latest{
                             position: absolute;
                             top: 0;
                             left: 0;
+                            transition: 0.8s all;
+                        }
+                        img:nth-child(1){
+                            opacity: 1;
+                        }
+                        img:nth-child(2){
+                            opacity: 0;
+                        }
+                        &:hover{
+                            img:nth-child(1){
+                                opacity: 0;
+                            }
+                            img:nth-child(2){
+                                opacity: 1;
+                                transform: rotateY(180deg);
+                            } 
                         }
                         .rate{
                             position: absolute;
