--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -114,7 +114,8 @@ header {
   right: 0;
   z-index: 1;
   justify-content: center;
-  padding: 30px 0;
+  align-items: center;
+  padding: 20px 0;
 }
 header .container {
   width: 1200px;
@@ -127,6 +128,7 @@ header .container {
 }
 header .container .logo {
   justify-content: flex-start;
+  align-items: center;
 }
 header .container .logo img {
   width: 200px;
@@ -134,6 +136,7 @@ header .container .logo img {
 }
 header .container .nav-bar {
   justify-content: center;
+  align-items: center;
   padding-right: 60px;
 }
 header .container .nav-bar nav {
@@ -212,6 +215,7 @@ header .container .nav-bar nav ul li .drop-down .drop-list ul li a:hover {
 }
 header .container .search-cart-login {
   justify-content: flex-end;
+  align-items: center;
 }
 header .container .search-cart-login div {
   position: relative;
@@ -426,7 +430,7 @@ header .container #product-nav-icon.search-cart-login svg:hover {
 }
 
 .scroll-header {
-  position: sticky;
+  position: fixed;
   background-color: white;
   height: 70px;
   justify-content: center;
