--- a/assets/css/homeStyle.css
+++ b/assets/css/homeStyle.css
@@ -889,6 +889,7 @@ section#latest .container .category ul li .active {
   color: #232323;
 }
 section#latest .container .porduct-slide .item .prdct {
+  position: relative;
   padding: 15px 15px 0;
   text-align: center;
 }
@@ -941,9 +942,10 @@ section#latest .container .porduct-slide .item .prdct .caption p {
   color: #eb4d4b;
 }
 section#latest .container .porduct-slide .item .prdct .caption button {
+  position: absolute;
+  bottom: 15px;
+  left: 33%;
   display: none;
-}
-section#latest .container .porduct-slide .item .prdct .caption .active-button {
   border: none;
   background-color: #eb4d4b;
   color: white;
