--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -118,7 +118,8 @@ header{
     right: 0;
     z-index: 1;
     justify-content: center;
-    padding: 30px 0;
+    align-items: center;
+    padding: 20px 0;
     .container{
         width: 1200px;
         max-width: 100%;
@@ -129,6 +130,7 @@ header{
         margin: 0 30px;
         .logo{
             justify-content: flex-start;
+            align-items: center;
             img{
                 width: 200px;
                 height: 35px;
@@ -136,6 +138,7 @@ header{
         }
         .nav-bar{
             justify-content: center;
+            align-items: center;
             padding-right: 60px;
             nav{
                 justify-content: center;
@@ -226,6 +229,7 @@ header{
         }
         .search-cart-login{
             justify-content: flex-end;
+            align-items: center;
             div{
                 position: relative;
                 width: 40px;
@@ -443,7 +447,7 @@ header{
 }
 
 .scroll-header{
-    position: sticky;
+    position: fixed;
     background-color: white;
     height: 70px;
     justify-content: center;
